2001-04-18  Havoc Pennington  <hp@redhat.com>

	* gdk/gdkkeyuni.c: Handle numeric keypad keysyms; bug #50201

2001-04-18  Havoc Pennington  <hp@redhat.com>

        Close bug #50615:
	
	* gtk/gtkstyle.c (gtk_default_draw_layout): Use text_gc to draw
	the layout

	* gtk/gtktext.c: Use base/text instead of bg/fg throughout

	* gtk/gtkentry.c: Use base/text instead of bg/fg throughout

	* gtk/gtktextdisplay.c: Use base/text instead of bg/fg throughout
	
	* gtk/gtkstyle.c (gtk_style_init): make GTK_STATE_SELECTED default
	to blue for base, in addition to bg
	
2001-04-18  Havoc Pennington  <hp@redhat.com>

	* tests/testgtk.c (create_image): allow shrinking the image window
	to test that we clip to allocation.

	* gtk/gtkimage.c (gtk_image_expose): clip to allocation,
	#9845

	* gtk/gtkenums.h: move GtkWrapMode in here, #50472

Wed Apr 18 14:23:14 2001  Owen Taylor  <otaylor@redhat.com>

	* gdk/x11/gdkimage-x11.c (gdk_image_new): Try changing
	mode on shm segments to 0600. We'll see who complains.

	* gdk/gdkwindow.c (_gdk_window_destroy_hierarchy): Call
	_gdk_windowing_window_destroy() AFTER recursing through
	children.

	* tests/Makefile.am (noinst_PROGRAMS): Build testsocket,
	testsocket_child on X.

	* tests/testsocket[_child].c: Fix uses of
	gtk_window_get_default_accel_group().

	[ Merge patch from Ramiro Estrugo  <ramiro@eazel.com> from gtk-1-2 ]

	* gdk/gdkimage.c: (gdk_image_get):
	Deal with the possibility that XGetImage() might return NULL.
	Allocate the GdkImagePrivate structure only after XGetImage()
	succeeds in order not to dereference a NULL ximage pointer.  This
	prevents a core dump when XGetImage() fails - which is unlikely,
	but can happen due to race conditions accessing the geometries of
	drawables.  An x error will still be triggered, but the gdk image
	wrapper at least wont seg fault.
	
2001-04-18  Havoc Pennington  <hp@redhat.com>

	* gtk/gtkimage.c: fix to properly queue resizes when the image is
	set
